# server/openapi.json
@@ -24,7 +24,7 @@
           "description": {
             "type": "string"
           },
-          "item_price": {
+          "item_price_string": {
             "type": "number"
           },
           "created_at": {
@@ -32,13 +32,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "id",
-          "name",
-          "description",
-          "item_price",
-          "created_at"
-        ]
+        "required": ["id", "name", "description", "item_price", "created_at"]
       },
       "Order": {
         "type": "object",
@@ -59,12 +53,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "id",
-          "user_id",
-          "order_item_name",
-          "order_date"
-        ]
+        "required": ["id", "user_id", "order_item_name", "order_date"]
       }
     },
     "parameters": {}
@@ -92,10 +81,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "status",
-                    "data"
-                  ]
+                  "required": ["status", "data"]
                 }
               }
             }
@@ -125,10 +111,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "status",
-                    "data"
-                  ]
+                  "required": ["status", "data"]
                 }
               }
             }
